--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -43,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        INSTALL_TYPE: ['conda', 'pip']
+        INSTALL_TYPE: ['pip']
         PYTHON_VERSION: ['3.7']
         TEST_TYPE: ['fast', 'slow']
     timeout-minutes: 120
@@ -71,7 +71,7 @@ jobs:
         shell: bash
         run: |
           sudo apt-get update --fix-missing
-          sudo apt-get install libxcb-randr0-dev libxcb-xtest0-dev libxcb-xinerama0-dev libxcb-shape0-dev libxcb-xkb-dev libegl1-mesa libxkbcommon-x11-0 xterm --fix-missing
+          sudo apt-get install -qq pyqt5-dev-tools libxcb-xinerama0 xterm --fix-missing
       - name: Cache conda
         uses: actions/cache@v2
         env:
@@ -108,6 +108,10 @@ jobs:
         run: |
           conda info
           conda list
+      #- name: Setup tmate session
+      #  if: env.RUN_BUILD == 'true'
+      #  uses: mxschmitt/action-tmate@v3
+      #  timeout-minutes: 30
       - name: Run manifest checks
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
