--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -26,6 +26,7 @@ dependencies:
 - psutil >=5.3
 - pygments >=2.0
 - pylint >=2.5.0,<3.0
+- pylint-venv >=2.1.1
 - pyls-spyder >=0.4.0
 - pyqt <5.16
 - pyqtwebengine <5.16
