--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -109,9 +109,10 @@ jobs:
         run: |
           conda info
           conda list
-      - name: Setup tmate session
-        uses: mxschmitt/action-tmate@v3
       - name: Run file tests
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
         run: xvfb-run --auto-servernum .github/scripts/modules_test.sh || xvfb-run --auto-servernum .github/scripts/modules_test.sh
+      - name: Setup tmate session
+        if: ${{ failure() }}
+        uses: mxschmitt/action-tmate@v3
