Rename enum module to plugins_enum

--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -113,6 +113,7 @@ jobs:
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
         run: xvfb-run --auto-servernum .github/scripts/modules_test.sh || xvfb-run --auto-servernum .github/scripts/modules_test.sh
+      # Uncomment this to debug the CI job
       - name: Setup tmate session
         if: ${{ failure() }}
         uses: mxschmitt/action-tmate@v3
