--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -114,6 +114,6 @@ jobs:
         shell: bash -l {0}
         run: xvfb-run --auto-servernum .github/scripts/modules_test.sh || xvfb-run --auto-servernum .github/scripts/modules_test.sh
       # Uncomment this to debug the CI job
-      - name: Setup tmate session
-        if: ${{ failure() }}
-        uses: mxschmitt/action-tmate@v3
+      # - name: Setup tmate session
+      #   if: ${{ failure() }}
+      #   uses: mxschmitt/action-tmate@v3
