pytest-qt 4: add a widget to qtbot, or do not use qtbot at all

--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -66,7 +66,7 @@ dependencies:
 - pytest-lazy-fixture
 - pytest-mock
 - pytest-order
-- pytest-qt <4.0
+- pytest-qt
 - pytest-xvfb
 - pyyaml
 - scipy
