--- a/external-deps/python-lsp-server/.github/workflows/static.yml
+++ b/external-deps/python-lsp-server/.github/workflows/static.yml
@@ -30,7 +30,7 @@ jobs:
           # errors first
           python-version: '3.6'
           architecture: 'x64'
-      - run: python -m pip install --upgrade pip setuptools
+      - run: python -m pip install --upgrade pip setuptools jsonschema
       - run: pip install -e .[pylint,pycodestyle,pyflakes]
       - name: Pylint checks
         run: pylint pylsp test
@@ -38,3 +38,9 @@ jobs:
         run: pycodestyle pylsp test
       - name: Pyflakes checks
         run: pyflakes pylsp test
+      - name: Validate JSON schema
+        run: jsonschema pylsp/config/schema.json
+      - name: Ensure JSON schema and Markdown docs are in sync
+        run: |
+          python scripts/jsonschema2md.py pylsp/config/schema.json EXPECTED_CONFIGURATION.md
+          diff EXPECTED_CONFIGURATION.md CONFIGURATION.md
