--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -31,7 +31,7 @@ on:
 
 jobs:
   build:
-    name: Py${{ matrix.PYTHON_VERSION }}, ${{ matrix.INSTALL_TYPE }}, ${{ matrix.TEST_TYPE }}
+    name: Py${{ matrix.PYTHON_VERSION }}, ${{ matrix.INSTALL_TYPE }}, ${{ matrix.TEST_TYPE }}, Group ${{ matrix.TEST_GROUP }}
     runs-on: ubuntu-latest
     env:
       CI: 'true'
@@ -40,12 +40,14 @@ jobs:
       PYTHON_VERSION: ${{ matrix.PYTHON_VERSION }}
       RUN_SLOW: ${{ matrix.TEST_TYPE == 'slow' }}
       USE_CONDA: ${{ matrix.INSTALL_TYPE == 'conda' }}
+      TEST_GROUP: ${{ matrix.TEST_GROUP }}
     strategy:
       fail-fast: false
       matrix:
         INSTALL_TYPE: ['conda', 'pip']
         PYTHON_VERSION: ['3.7']
         TEST_TYPE: ['fast', 'slow']
+        TEST_GROUP: ['1', '2', '3', '4', '5', '6']
 
     steps:
       - name: Checkout Pull Requests
