Testing: Add a way to create simple projects to the main_window fixture

--- a/pytest.ini
+++ b/pytest.ini
@@ -25,6 +25,7 @@ markers =
     change_directory
     use_startup_wdir: Test startup workingdir CONF
     preload_project: Preload a project on the main window
+    preload_complex_project: Preload a complex project on the main window
     no_xvfb
     external_interpreter
     test_environment_interpreter
