--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -25,7 +25,7 @@ dependencies:
 - pickleshare >=0.4
 - psutil >=5.3
 - pygments >=2.0
-- pylint >=2.5.0
+- pylint >=2.5.0,<2.10.0
 - pyls-spyder >=0.4.0
 - pyqt <5.13
 - python-lsp-black >=1.0.0
