--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: macos-latest
     strategy:
       matrix:
-        build_type: ['Lite', 'Full']
+        build_type: ['Full']
     defaults:
       run:
         shell: bash -l {0}
@@ -54,6 +54,8 @@ jobs:
           ${pythonLocation}/bin/python -m pip list
       - name: Build Application Bundle
         run: ${pythonLocation}/bin/python setup.py ${LITE_FLAG} --dist-dir ${DISTDIR}
+      - name: Test Application Bundle
+        run: ./test.sh -t 30 -i 5 -d 2 ${DISTDIR}/Spyder.app/Contents/MacOS/Spyder --debug-info=verbose
       - name: Build Disk Image
         run: ${pythonLocation}/bin/python setup.py ${LITE_FLAG} --dist-dir ${DISTDIR} --dmg --no-app
       - name: Upload Artifact
