Testing: Add a test for the Tkinter backend

--- a/pytest.ini
+++ b/pytest.ini
@@ -29,3 +29,4 @@ markers =
     no_xvfb
     external_interpreter
     test_environment_interpreter
+    tk_backend: Test the Tkinter Matplotlib backend
