Add duplicate about error with jupyter_client 7

--- a/.github/workflows/duplicates.yml
+++ b/.github/workflows/duplicates.yml
@@ -94,5 +94,11 @@ jobs:
                "reply": "Thanks for reporting. To fix this, please close Spyder, open the Anaconda Prompt and run there:<br><br>`conda install qdarkstyle=2.8.1`",
                "labels": ["resolution:Duplicate"],
                "close": true
+             },
+             {
+               "pattern": "AttributeError: 'SpyderKernelManager' object has no attribute 'kernel'",
+               "reply": "Thanks for reporting. To fix this, please close Spyder, open the Anaconda Prompt and run there:<br><br>`conda install jupyter_client=6.1.12`",
+               "labels": ["resolution:Duplicate"],
+               "close": true
              }
              ]
