--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -15,6 +15,7 @@ dependencies:
 - intervaltree >=3.0.2
 - ipython >=7.6.0
 - jedi >=0.17.2,<0.19.0
+- jellyfish >=0.7
 - jsonschema >=3.2.0
 - keyring >=17.0.0
 - nbconvert >=4.0
