--- a/.github/workflows/test-mac.yml
+++ b/.github/workflows/test-mac.yml
@@ -66,7 +66,7 @@ jobs:
         shell: bash -l {0}
         run: echo "RUN_BUILD=true" >> $GITHUB_ENV
       - name: Cache conda
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         env:
           # Increase this value to reset cache if requirements/*.txt has not changed
           CACHE_NUMBER: 0
@@ -75,19 +75,22 @@ jobs:
           key: ${{ runner.os }}-cacheconda-install${{ matrix.INSTALL_TYPE }}-${{ matrix.PYTHON_VERSION }}-${{ env.CACHE_NUMBER }}-${{ hashFiles('requirements/*.txt') }}
       - name: Cache pip
         if: env.RUN_BUILD == 'true'
-        uses: actions/cache@v1
+        uses: actions/cache@v2
         with:
           path: ~/Library/Caches/pip
-          key: ${{ runner.os }}-cachepip-install${{ matrix.INSTALL_TYPE }}-${{ env.CACHE_NUMBER }}-${{ hashFiles('requirements/*.txt') }}
+          key: ${{ runner.os }}-cachepip-install${{ matrix.INSTALL_TYPE }}-${{ env.CACHE_NUMBER }}-${{ hashFiles('setup.py') }}
       - name: Install Conda
         if: env.RUN_BUILD == 'true'
         uses: conda-incubator/setup-miniconda@v2
         with:
           activate-environment: test
-          auto-update-conda: true
+          auto-update-conda: false
           auto-activate-base: false
           python-version: ${{ matrix.PYTHON_VERSION }}
           use-only-tar-bz2: true
+          channels: conda-forge,defaults
+          channel-priority: strict
+          miniforge-variant: Mambaforge
       - name: Create test environment
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
