--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -29,9 +29,7 @@ dependencies:
 - pyls-spyder >=0.4.0
 - pyqt <5.13
 - python-lsp-black >=1.0.0
-# NOTE: There's no need to set constraints for python-lsp-server
-# here because Spyder uses the subrepo for it when started in Binder.
-- python-lsp-server
+- python-lsp-server >=1.2.2,<1.3.0
 - pyxdg >=0.26
 - pyzmq >=17
 - qdarkstyle =3.0.2
@@ -42,9 +40,7 @@ dependencies:
 - rtree >=0.9.7
 - setuptools >=49.6.0
 - sphinx >=0.6.6
-# NOTE: There's no need to set constraints for spyder-kernels here
-# because Spyder uses the subrepo for it when started in Binder.
-- spyder-kernels
+- spyder-kernels >=2.1.1,<2.2.0
 - textdistance >=4.2.0
 - three-merge >=0.1.1
 - watchdog >=0.10.3
