git subrepo clone --branch=unpin-pylint --force https://github.com/bnavigator/python-lsp-server.git external-deps/python-lsp-server
subrepo:
  subdir:   "external-deps/python-lsp-server"
  merged:   "c1026617d"
upstream:
  origin:   "https://github.com/bnavigator/python-lsp-server.git"
  branch:   "unpin-pylint"
  commit:   "c1026617d"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "2f68596"

--- a/external-deps/python-lsp-server/.pylintrc
+++ b/external-deps/python-lsp-server/.pylintrc
@@ -16,7 +16,8 @@ disable =
     too-few-public-methods,
     too-many-arguments,
     too-many-instance-attributes,
-    import-error
+    import-error,
+    consider-using-f-string,
 
 [REPORTS]
 
