Use environment variable to run Lite builds only on release events. Full builds for pull_request and release events.

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -21,18 +21,22 @@ jobs:
       LITE_FLAG: ${{ matrix.build_type == 'Lite' && '--lite' || '' }}
       DMGNAME: ${{ matrix.build_type == 'Lite' && 'Spyder-Lite.dmg' || 'Spyder.dmg' }}
       DISTDIR: ${{ github.workspace }}/dist
+      RUNBUILD: ${{ (matrix.build_type == 'Full' || github.event_name == 'release') && '1' || '0' }}
     steps:
       - name: Checkout Code
+        if: ${{ env.RUNBUILD == '1' }}
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
       - name: Setup Python
+        if: ${{ env.RUNBUILD == '1' }}
         uses: actions/setup-python@v2
         with:
           # This is the last version working with py2app and modulegraph
           python-version: '3.9.5'
           architecture: 'x64'
       - name: Install Dependencies
+        if: ${{ env.RUNBUILD == '1' }}
         run: |
           INSTALL_FLAGS=()
           if [[ -z ${LITE_FLAG} ]]; then
@@ -42,24 +46,28 @@ jobs:
           ${pythonLocation}/bin/python -m pip install -r req-build.txt -r req-extras.txt "${INSTALL_FLAGS[@]}" -e ${GITHUB_WORKSPACE}
           ${pythonLocation}/bin/python -m pip uninstall -q -y spyder
       - name: Install Subrepos
-        if: ${{github.event_name == 'pull_request'}}
+        if: ${{ github.event_name == 'pull_request' && env.RUNBUILD == '1' }}
         run: |
           ${pythonLocation}/bin/python -m pip install \
             -e ${GITHUB_WORKSPACE}/external-deps/spyder-kernels \
             -e ${GITHUB_WORKSPACE}/external-deps/python-lsp-server \
             -e ${GITHUB_WORKSPACE}/external-deps/qdarkstyle
       - name: Show Build Environment
+        if: ${{ env.RUNBUILD == '1' }}
         run: |
           ${pythonLocation}/bin/python -V -V
           ${pythonLocation}/bin/python -m pip list
       - name: Build Application Bundle
+        if: ${{ env.RUNBUILD == '1' }}
         run: ${pythonLocation}/bin/python setup.py ${LITE_FLAG} --dist-dir ${DISTDIR}
       - name: Test Application Bundle
-        if: ${{github.event_name == 'pull_request'}}
+        if: ${{ github.event_name == 'pull_request' && env.RUNBUILD == '1' }}
         run: ./test_app.sh -t 60 ${DISTDIR}
       - name: Build Disk Image
+        if: ${{ env.RUNBUILD == '1' }}
         run: ${pythonLocation}/bin/python setup.py ${LITE_FLAG} --dist-dir ${DISTDIR} --dmg --no-app
       - name: Upload Artifact
+        if: ${{ env.RUNBUILD == '1' }}
         uses: actions/upload-artifact@v2
         with:
           path: ${{ env.DISTDIR }}/${{ env.DMGNAME }}
