Add command to downgrade freetype when SpyderKernelManager appears
Those errors are related because they appear after people run `conda
update --all`.

--- a/.github/workflows/duplicates.yml
+++ b/.github/workflows/duplicates.yml
@@ -97,7 +97,7 @@ jobs:
              },
              {
                "pattern": "AttributeError: 'SpyderKernelManager' object has no attribute 'kernel'",
-               "reply": "Thanks for reporting. To fix this, please close Spyder, open the Anaconda Prompt and run there:<br><br>`conda install jupyter_client=6.1.12`",
+               "reply": "Thanks for reporting. To fix this, please close Spyder, open the Anaconda Prompt and run there:<br><br>`conda install jupyter_client=6.1.12 freetype=2.10.4`",
                "labels": ["resolution:Duplicate"],
                "close": true
              }
