git subrepo pull external-deps/python-lsp-server
subrepo:
  subdir:   "external-deps/python-lsp-server"
  merged:   "534b6b513"
upstream:
  origin:   "https://github.com/python-lsp/python-lsp-server.git"
  branch:   "develop"
  commit:   "534b6b513"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "2f68596"

--- a/external-deps/python-lsp-server/.github/workflows/test-win.yml
+++ b/external-deps/python-lsp-server/.github/workflows/test-win.yml
@@ -35,4 +35,6 @@ jobs:
           architecture: 'x64'
       - run: python -m pip install --upgrade pip setuptools
       - run: pip install -e .[all,test]
+      - name: Show test environment
+        run: pip list
       - run: pytest -v test/
