--- a/external-deps/python-lsp-server/.github/workflows/test-linux.yml
+++ b/external-deps/python-lsp-server/.github/workflows/test-linux.yml
@@ -40,6 +40,8 @@ jobs:
           /tmp/pyenv/bin/python -m pip install loghub
       - run: python -m pip install --upgrade pip setuptools
       - run: pip install -e .[all,test]
+      - name: Show test environment
+        run: pip list
       - run: pytest -v test/
       # Enable this if SSH debugging is required
       # - name: Setup tmate session
