git subrepo pull external-deps/python-lsp-server
subrepo:
  subdir:   "external-deps/python-lsp-server"
  merged:   "85afa3c19"
upstream:
  origin:   "https://github.com/python-lsp/python-lsp-server.git"
  branch:   "develop"
  commit:   "85afa3c19"
git-subrepo:
  version:  "0.4.3"
  origin:   "https://github.com/ingydotnet/git-subrepo"
  commit:   "2f68596"

--- a/external-deps/python-lsp-server/.pylintrc
+++ b/external-deps/python-lsp-server/.pylintrc
@@ -18,6 +18,7 @@ disable =
     too-many-instance-attributes,
     import-error,
     consider-using-f-string,
+    logging-fstring-interpolation
 
 [REPORTS]
 
