CI: Update workflows to use MacOS 10.15

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -9,7 +9,7 @@ name: Create macOS App Bundle and DMG
 jobs:
   build:
     name: macOS App Bundle
-    runs-on: macos-latest
+    runs-on: macos-10.15
     strategy:
       matrix:
         build_type: ['Full', 'Lite']
