--- a/.github/workflows/test-mac.yml
+++ b/.github/workflows/test-mac.yml
@@ -32,7 +32,7 @@ on:
 jobs:
   build:
     name: Py${{ matrix.PYTHON_VERSION }}, ${{ matrix.INSTALL_TYPE }}, ${{ matrix.TEST_TYPE }}
-    runs-on: macos-latest
+    runs-on: macos-10.15
     env:
       CI: 'true'
       CODECOV_TOKEN: "56731c25-9b1f-4340-8b58-35739bfbc52d"
