--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -13,7 +13,7 @@ dependencies:
 - cookiecutter >=1.6.0
 - diff-match-patch >=20181111
 - intervaltree >=3.0.2
-- ipython >=7.6.0
+- ipython >=7.6.0,<8.0.0
 - jedi >=0.17.2,<0.19.0
 - jellyfish >=0.7
 - jsonschema >=3.2.0
