--- a/.github/workflows/test-win.yml
+++ b/.github/workflows/test-win.yml
@@ -46,6 +46,7 @@ jobs:
         INSTALL_TYPE: ['conda']
         PYTHON_VERSION: ['3.7']
         TEST_TYPE: ['fast', 'slow']
+    timeout-minutes: 120
     steps:
       - name: Checkout Pull Requests
         if: github.event_name == 'pull_request'
