--- a/external-deps/python-lsp-server/.github/workflows/static.yml
+++ b/external-deps/python-lsp-server/.github/workflows/static.yml
@@ -28,7 +28,7 @@ jobs:
         with:
           # TODO: check with Python 3, but need to fix the
           # errors first
-          python-version: '3.6'
+          python-version: '3.7'
           architecture: 'x64'
       - run: python -m pip install --upgrade pip setuptools jsonschema
       - run: pip install -e .[pylint,pycodestyle,pyflakes]
@@ -39,7 +39,7 @@ jobs:
       - name: Pyflakes checks
         run: pyflakes pylsp test
       - name: Validate JSON schema
-        run: jsonschema pylsp/config/schema.json
+        run: echo {} | jsonschema pylsp/config/schema.json
       - name: Ensure JSON schema and Markdown docs are in sync
         run: |
           python scripts/jsonschema2md.py pylsp/config/schema.json EXPECTED_CONFIGURATION.md
