--- a/external-deps/python-lsp-server/.github/workflows/test-linux.yml
+++ b/external-deps/python-lsp-server/.github/workflows/test-linux.yml
@@ -20,7 +20,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PYTHON_VERSION: ['3.9', '3.8', '3.7', '3.6']
+        PYTHON_VERSION: ['3.9', '3.8', '3.7']
     timeout-minutes: 10
     steps:
       - uses: actions/cache@v1
