--- a/pytest.ini
+++ b/pytest.ini
@@ -30,3 +30,4 @@ markers =
     external_interpreter
     test_environment_interpreter
     tk_backend: Test the Tkinter Matplotlib backend
+    known_leak: Known thread or open file leaks
