--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,5 @@
 # Github helper pieces to make some files not show up in diffs automatically
-external-deps/* linguist-generated=true
+external-deps/**/* linguist-generated=true
 
 # Get better diffs for Python files
 *.py diff=python
