More changes to support PyQt 5.15

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -40,11 +40,12 @@ jobs:
       PYTHON_VERSION: ${{ matrix.PYTHON_VERSION }}
       RUN_SLOW: ${{ matrix.TEST_TYPE == 'slow' }}
       USE_CONDA: ${{ matrix.INSTALL_TYPE == 'conda' }}
+      USE_GDB: 'false'
     strategy:
       fail-fast: false
       matrix:
-        INSTALL_TYPE: ['pip']
-        PYTHON_VERSION: ['3.7']
+        INSTALL_TYPE: ['pip', 'conda']
+        PYTHON_VERSION: ['3.7', '3.9']
         TEST_TYPE: ['fast', 'slow']
     timeout-minutes: 120
     steps:
@@ -116,6 +117,10 @@ jobs:
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
         run: check-manifest
+      - name: Run tests with gdb
+        if: env.USE_GDB == 'true'
+        shell: bash -l {0}
+        run: xvfb-run --auto-servernum gdb -return-child-result -batch -ex r -ex py-bt --args python runtests.py -s
       - name: Run tests
         if: env.RUN_BUILD == 'true'
         shell: bash -l {0}
