--- a/.github/workflows/test-mac.yml
+++ b/.github/workflows/test-mac.yml
@@ -16,8 +16,10 @@ on:
       - '**.sh'
 
   pull_request:
-    branches-ignore:
-      - '**'
+    branches:
+      - master
+      - 5.*
+      - 4.x
     paths:
       - '.github/scripts/*.sh'
       - '.github/workflows/*.yml'
@@ -41,7 +43,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        INSTALL_TYPE: ['conda']
+        INSTALL_TYPE: ['pip', 'conda']
         PYTHON_VERSION: ['3.7']
         TEST_TYPE: ['fast', 'slow']
     timeout-minutes: 120
