--- a/pytest.ini
+++ b/pytest.ini
@@ -31,3 +31,4 @@ markers =
     test_environment_interpreter
     tk_backend: Test the Tkinter Matplotlib backend
     known_leak: Known thread or open file leaks
+    no_new_console: Prevent creating a new IPython console when reusing a mainwindow instance
