--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -16,8 +16,10 @@ on:
       - '**.sh'
 
   pull_request:
-    branches-ignore:
-      - '**'
+    branches:
+      - master
+      - 5.*
+      - 4.x
     paths:
       - '.github/scripts/*.sh'
       - '.github/workflows/*.yml'
@@ -39,7 +41,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        PYTHON_VERSION: ['3.7']
+        PYTHON_VERSION: ['3.7', '3.9']
     timeout-minutes: 30
     steps:
       - name: Checkout Pull Requests
