--- a/.github/workflows/test-win.yml
+++ b/.github/workflows/test-win.yml
@@ -16,8 +16,10 @@ on:
       - '**.sh'
 
   pull_request:
-    branches-ignore:
-      - '**'
+    branches:
+      - master
+      - 5.*
+      - 4.x
     paths:
       - '.github/scripts/*.sh'
       - '.github/workflows/*.yml'
@@ -41,8 +43,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        INSTALL_TYPE: ['conda']
-        PYTHON_VERSION: ['3.7']
+        INSTALL_TYPE: ['pip', 'conda']
+        PYTHON_VERSION: ['3.7', '3.9']
         TEST_TYPE: ['fast', 'slow']
     timeout-minutes: 120
     steps:
