--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,7 @@ ignore =
     .coveragerc
     .pep8speaks.yml
     Announcements.md
+    CHANGELOG.md
     CODE_OF_CONDUCT.md
     CONTRIBUTING.md
     RELEASE.md
@@ -14,6 +15,9 @@ ignore =
     conftest.py
     crowdin.yml
     external-deps/**
+    changelogs/Spyder-4.md
+    changelogs/Spyder-3.md
+    changelogs/Spyder-2.md
     img_src/*.svg
     img_src/*.png
     img_src/*.bmp
