Ignore REVIEW.md from 'check-manifest' and fix setup.py patch for Win installers on PRs

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,7 @@ ignore =
     CODE_OF_CONDUCT.md
     CONTRIBUTING.md
     RELEASE.md
+    REVIEW.md
     TROUBLESHOOTING.md
     MAINTENANCE.md
     binder/**
