--- a/.github/workflows/test-win.yml
+++ b/.github/workflows/test-win.yml
@@ -44,7 +44,7 @@ jobs:
       fail-fast: false
       matrix:
         INSTALL_TYPE: ['pip', 'conda']
-        PYTHON_VERSION: ['3.7', '3.9']
+        PYTHON_VERSION: ['3.9']
         TEST_TYPE: ['fast', 'slow']
     timeout-minutes: 120
     steps:
