--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -29,6 +29,7 @@ dependencies:
 - pylint >=2.5.0
 - pyls-spyder >=0.4.0
 - pyqt <5.16
+- pyqtwebengine <5.16
 - python-lsp-black >=1.2.0
 - python-lsp-server >=1.4.1,<1.5.0
 - pyxdg >=0.26
