--- a/.github/workflows/duplicates.yml
+++ b/.github/workflows/duplicates.yml
@@ -100,5 +100,11 @@ jobs:
                "reply": "Thanks for reporting. To fix this, please close Spyder, open the Anaconda Prompt and run there:<br><br>`conda install jupyter_client=6.1.12 freetype=2.10.4`",
                "labels": ["resolution:Duplicate"],
                "close": true
+             },
+             {
+               "pattern": "TypeError: _show_prompt() got an unexpected keyword argument 'separator'",
+               "reply": "Thanks for reporting. This error is already fixed in our latest version.<br><br>Since it's still not available in Anaconda, you have two options:<br><br>1. Use our Windows or Mac installer, which you can find [here](https://github.com/spyder-ide/spyder/releases).<br><br>2. Create a new environment with conda-forge packages. For that, please close Spyder, open the Anaconda Prompt and run the following commands there:<br><br>`conda create -n spyder-cf -c conda-forge spyder`<br>`conda activate spyder-cf`<br>`spyder`",
+               "labels": ["resolution:Duplicate"],
+               "close": true
              }
              ]
