IPython Console: Add test for 'startup/run_lines' config with an active project. Add 'no_web_widgets' mark to pytest.ini to prevent warning

--- a/pytest.ini
+++ b/pytest.ini
@@ -33,3 +33,4 @@ markers =
     known_leak: Known thread or open file leaks
     no_new_console: Prevent creating a new IPython console when reusing a mainwindow instance
     close_main_window: Close main window instance after test
+    no_web_widgets
