--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -26,7 +26,7 @@ dependencies:
 - pickleshare >=0.4
 - psutil >=5.3
 - pygments >=2.0
-- pylint >=2.5.0
+- pylint >=2.5.0,<3.0
 - pyls-spyder >=0.4.0
 - pyqt <5.16
 - pyqtwebengine <5.16
