Tests: Change console up validation for tests. Add more known_leak and skip markers

--- a/.github/workflows/test-linux.yml
+++ b/.github/workflows/test-linux.yml
@@ -40,7 +40,7 @@ jobs:
       PYTHON_VERSION: ${{ matrix.PYTHON_VERSION }}
       RUN_SLOW: ${{ matrix.TEST_TYPE == 'slow' }}
       USE_CONDA: ${{ matrix.INSTALL_TYPE == 'conda' }}
-      USE_GDB: 'true'
+      USE_GDB: 'false'
     strategy:
       fail-fast: false
       matrix:
