--- a/.github/workflows/test-files.yml
+++ b/.github/workflows/test-files.yml
@@ -31,7 +31,7 @@ on:
 
 jobs:
   build:
-    name: Py${{ matrix.PYTHON_VERSION }}
+    name: Linux - Py${{ matrix.PYTHON_VERSION }}
     runs-on: ubuntu-latest
     env:
       CI: 'true'
