--- a/.github/workflows/test-mac.yml
+++ b/.github/workflows/test-mac.yml
@@ -35,7 +35,7 @@ on:
 
 jobs:
   build:
-    name: Py${{ matrix.PYTHON_VERSION }}, ${{ matrix.INSTALL_TYPE }}, ${{ matrix.TEST_TYPE }}
+    name: Mac - Py${{ matrix.PYTHON_VERSION }}, ${{ matrix.INSTALL_TYPE }}, ${{ matrix.TEST_TYPE }}
     runs-on: macos-10.15
     env:
       CI: 'true'
@@ -47,7 +47,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        INSTALL_TYPE: ['pip']
+        INSTALL_TYPE: ['conda']
         PYTHON_VERSION: ['3.9']
         TEST_TYPE: ['fast', 'slow']
     timeout-minutes: 120
