--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -20,6 +20,7 @@ dependencies:
 - keyring >=17.0.0
 - nbconvert >=4.0
 - numpydoc >=0.6.0
+- numpy >=1.7,<1.23
 - paramiko >=2.4.0
 - parso >=0.7.0,<0.9.0
 - pexpect >=4.4.0
