Restrict unnecessary workflows when only installer files are changed.
Installers ignore changes to other installers.
test-files workflow ignores changes to installers.

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -1,5 +1,9 @@
 on:
   pull_request:
+    paths:
+      - '!installers/Windows/**'
+      - '!.github/workflows/installer-win.yml'
+
   release:
     types:
       - created
