Test the application bundle after code signing.
As a final test before limiting code signing and notarizting to releases, check that the application bundle test succeeds on a signed application.
Also check that both full and lite versions succeed.

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -27,7 +27,7 @@ jobs:
     steps:
     - id: set-matrix
       run: |
-        if [[ ${GITHUB_EVENT_NAME} == 'release' ]]; then
+        if [[ ${GITHUB_EVENT_NAME} == 'pull_request' ]]; then
             build_type=$(echo "['Full', 'Lite']")
         else
             build_type=$(echo "['Full']")
@@ -81,9 +81,6 @@ jobs:
           curl -Ls https://micro.mamba.pm/api/micromamba/osx-64/latest | tar -xvj bin/micromamba
       - name: Build Application Bundle
         run: ${pythonLocation}/bin/python setup.py ${LITE_FLAG} --dist-dir ${DISTDIR}
-      - name: Test Application Bundle
-        if: ${{github.event_name == 'pull_request'}}
-        run: ./test_app.sh -t 60 -d 10 ${DISTDIR}
       - name: Create Keychain
         run: ./certkeychain.sh "${MACOS_CERTIFICATE}" "${MACOS_CERTIFICATE_PWD}"
       - name: Code Sign Application
@@ -92,6 +89,9 @@ jobs:
           rm -v ${DISTDIR}/Spyder.app/Contents/Frameworks/liblzma.5.dylib
           cp -v ${pil}/.dylibs/liblzma.5.dylib ${DISTDIR}/Spyder.app/Contents/Frameworks/
           ./codesign.sh -a "${DISTDIR}/Spyder.app"
+      - name: Test Application Bundle
+        if: ${{github.event_name == 'pull_request'}}
+        run: ./test_app.sh -t 60 -d 10 ${DISTDIR}
       - name: Build Disk Image
         run: ${pythonLocation}/bin/python setup.py ${LITE_FLAG} --dist-dir ${DISTDIR} --dmg --no-app
       - name: Sign Disk Image
