--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,7 +6,6 @@ dependencies:
 # the contents of this requirements/main.yml to this file.yml.
 # Please *DO NOT* make changes directly just to here - make changes
 # to requirements/main.yml, and copy it here.
-- applaunchservices >=0.1.7
 - atomicwrites >=1.2.0
 - chardet >=2.0.0
 - cloudpickle >=0.5.0
@@ -20,7 +19,6 @@ dependencies:
 - keyring >=17.0.0
 - nbconvert >=4.0
 - numpydoc >=0.6.0
-- paramiko >=2.4.0  # [win]
 - parso >=0.7.0,<0.9.0
 - pexpect >=4.4.0
 - pickleshare >=0.4
@@ -32,7 +30,7 @@ dependencies:
 - pyqtwebengine <5.16
 - python-lsp-black >=1.2.0
 - python-lsp-server >=1.4.1,<1.5.0
-- pyxdg >=0.26  # [linux]
+- pyxdg >=0.26
 - pyzmq >=22.1.0
 - qdarkstyle >=3.0.2,<3.1.0
 - qstylizer >=0.1.10
