CI: Update path restrictions to trigger workflows
Co-authored-by: Carlos Cordoba <ccordoba12@gmail.com>

--- a/.github/workflows/installer-macos.yml
+++ b/.github/workflows/installer-macos.yml
@@ -1,6 +1,11 @@
 on:
   pull_request:
     paths:
+      - 'requirements/*.yml'
+      - 'MANIFEST.in'
+      - '**.bat'
+      - '**.py'
+      - '**.sh'
       - '!installers/Windows/**'
       - '!.github/workflows/installer-win.yml'
 
