--- a/.github/workflows/test-win.yml
+++ b/.github/workflows/test-win.yml
@@ -9,7 +9,7 @@ on:
     paths:
       - '.github/scripts/*.sh'
       - '.github/workflows/*.yml'
-      - 'requirements/*.txt'
+      - 'requirements/*.yml'
       - 'MANIFEST.in'
       - '**.bat'
       - '**.py'
@@ -25,7 +25,7 @@ on:
     paths:
       - '.github/scripts/*.sh'
       - '.github/workflows/*.yml'
-      - 'requirements/*.txt'
+      - 'requirements/*.yml'
       - 'MANIFEST.in'
       - '**.bat'
       - '**.py'
